--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
   <body>
 
     <ol id="surnameList">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+
     </ol>
 
-
+  <h2 id="risultato">La posizione dell'utente è:</h2>
 
     <script src="js/script.js" charset="utf-8"></script>
   </body>
